force-app/main/default/objects/Module__c/Module__c.object-meta.xml
<CustomObject>
    <label>Module</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Module Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>