force-app/main/default/objects/Module__c/fields/MaxCredits__c.field-meta.xml
<CustomField>
    <fullName>MaxCredits__c</fullName>
    <label>Maximum Credits Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>