force-app/main/default/objects/Module__c/fields/ModuleName__c.field-meta.xml
<CustomField>
    <fullName>ModuleName__c</fullName>
    <label>Module Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>