force-app/main/default/objects/Module__c/fields/PassingMark__c.field-meta.xml
<CustomField>
    <fullName>PassingMark__c</fullName>
    <label>Passing Mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>