force-app/main/default/objects/Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ModuleName__c</columns>
    <columns>MaxCredits__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>